# 3D-Computer-Vision

./: .gitignore  README.md
1-image transform/code/: README.md
2-image rectification/codes/Metric method/: RectifierH-inverse  RectifierH-inverse.cpp
2-image rectification/codes/One-Step method/: CMakeLists.txt  RectifierOneStep.cpp
2-image rectification/codes/Two-Steps method/: CMakeLists.txt  RectifierTwoSteps.cpp
3-automated select points/code/python/: PanoGen.py
3-make panorama image (automated select points)/code/python/: PanoGen.py
image transform/code/: CMakeLists.txt  HomographicTransfer.cpp
image transform/image rectification/metric/code/: CMakeLists.txt  README.md  RectifierH-inverse.cpp
