cmake_minimum_required(VERSION 3.0)
project( RectifierOneStep )
find_package( OpenCV REQUIRED )
find_package (Eigen3 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${Eigen_INCLUDE_DIRS} )
add_executable( RectifierOneStep RectifierOneStep.cpp )
target_link_libraries( RectifierOneStep ${OpenCV_LIBS} )
target_link_libraries (RectifierOneStep Eigen3::Eigen)
