cmake_minimum_required(VERSION 3.0)
project( RectifierTwoSteps )
find_package( OpenCV REQUIRED )
find_package (Eigen3 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${Eigen_INCLUDE_DIRS} )
add_executable( RectifierTwoSteps RectifierTwoSteps.cpp )
target_link_libraries( RectifierTwoSteps ${OpenCV_LIBS} )
target_link_libraries (RectifierTwoSteps Eigen3::Eigen)
